Update to latest release

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							<label for="leet" onclick="change(this)"><i class="fa fa fa-toggle-off"></i> Leet</label>
 						</div>
 					</div>
-					<button class="clickable" id="go"><i class="fa fa-spin fa-cog fa-lg" aria-hidden="true"></i> Generate</button>
+					<button class="clickable" id="go" onclick="begin()"><i class="fa fa-spin fa-cog fa-lg" aria-hidden="true"></i> Generate</button>
 				</form>
 			</aside>
 			<content>
